--- a/styles.css
+++ b/styles.css
@@ -88,6 +88,7 @@ button{
 }
 
 /* TODO: Highlight class for list items */
-.hobbies li{
+.hobby{
     color: aqua;
+    background-color: aquamarine;
 }
